syntax = "proto2";

option java_package = "protocol";

option java_outer_classname = "TradeProtos";

import "enums.proto";
import "resources.proto";
import "board.proto";

message TradeRequest 
{
    oneof Contents
    { 
        PlayerTradeProto playerTrade = 1;
        BankTradeProto bankTrade = 2;
        PortTradeProto portTrade = 3;
    }
}

message PlayerTradeProto 
{
    required ColourProto  offerer = 1;
    required ResourceCount offer = 2;
    repeated ColourProto  recipients = 3;
    required ResourceCount request = 4;
}

message BankTradeProto
{
    required ColourProto player = 1;
    required ResourceCount offerResources = 2;
    required ResourceCount requestResources = 3;
}

message PortTradeProto
{ 
    required ColourProto player = 1;
    required ResourceCount requestResources = 2;
    required PortProto port = 3;
    required ResourceCount offerResources = 4;
}

